--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "scripts": {
     "github": "sh deploy.sh",
     "dev": "./index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "format": "prettier --write \"./src/**/*.{js,ts,vue,json}\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && git add ."
+    }
   },
   "folderTitleMap": {
     "team-standard": "团队规范",
@@ -18,7 +24,7 @@
     "think": "思考与总结",
     "react-native": "ReacNative",
     "tools": "效率工具"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lq782655835/node-vuepress-auto-read.git"
@@ -40,6 +46,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "husky": "^1.3.1",
+    "mocha": "^5.2.0",
+    "prettier": "^1.16.1"
   }
 }
